--- a/resources/assets/main.css
+++ b/resources/assets/main.css
@@ -15,6 +15,15 @@ ul {
 }
 
 
+@keyframes flash {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0; }
+}
+
+.flashing-text {
+  animation: flash 2s infinite;
+}
+
 /* latin-ext */
 @font-face {
   font-family: 'Oxygen Mono';
